fix preview alignment issue

--- a/src/resources/extensions/quarto/confluence/theme.scss
+++ b/src/resources/extensions/quarto/confluence/theme.scss
@@ -19,7 +19,6 @@ main.content {
 
 
 #title-block-header {
-  margin-left: -30px;
 
   #avatar-icon {
     align-self: center;
